# xorpl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: ast.rs  circuit.rs  circuit_transform.rs  emit.rs  expr.rs  expr_transform.rs  fixture_defs.rs  lib.rs  lower.rs  mask.rs  ops.rs  pipeline.rs  prelude.rs  swap.rs  vm.rs
tests/: bytes_ingestion.rs  emit_tests.rs
tests/fixtures/: add32_demo.rs  add32_demo_verify.rs  chacha_qr.rs  chacha_qr_rotated.rs  chacha_qr_rotated_verify.rs  chacha_qr_verify.rs  mux_demo.rs  mux_demo_verify.rs  or_rotl_demo.rs  or_rotl_demo_verifier.rs  or_rotl_demo_verify.rs  or_rotl_mux_decoy.rs  or_rotl_mux_decoy_verify.rs  sha256_qr.rs  sha256_qr_verify.rs
